--- a/index.html
+++ b/index.html
@@ -459,14 +459,14 @@
   </div>
   <script>
         // Firebase Configuration - Replace with your actual config
-        const firebaseConfig = {
-            apiKey: "AIzaSyDdVgKwhZl-aNLqjlMOTejjbqujBiH6VkE",
-            authDomain: "bitven-6d42c.firebaseapp.com",
-            projectId: "bitven-6d42c",
-            storageBucket: "bitven-6d42c.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abcdef123456789"
-        };
+      const firebaseConfig = {
+  apiKey: "AIzaSyDWSebqVunmSzmw168fDZE_ePqoJ-_jsig",
+  authDomain: "bitven-6d42c.firebaseapp.com",
+  projectId: "bitven-6d42c",
+  storageBucket: "bitven-6d42c.firebasestorage.app",
+  messagingSenderId: "511584242303",
+  appId: "1:511584242303:web:bdfeac7801c4d17b254d4a"
+};
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
